_errm.txt
  File "D:\AUTO-EVO-AI-V0.1\_fix_bytelevel_multi.py", line 13
    (b".join('\r\n')\r\n", b".join('\\n')\r\n'),
                           ^
SyntaxError: unterminated string literal (detected at line 13)
